[package]
name = "minesweepe-rs"
version = "0.1.0"
authors = ["Sam Giles <sam.giles@citymapper.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
iced = { git = "https://github.com/hecrj/iced.git", branch="master", features = ["canvas", "tokio", "debug"] }
tokio = { version = "0.2", features = ["blocking"] }
rand = "0.7"
